# opencv_contrib

modules/text/: CMakeLists.txt  README.md
modules/text/include/opencv2/text/: #text_transformations.hpp#  flow_lines.hpp  map_text_synthesizer.hpp  mts_basehelper.hpp  mts_bghelper.hpp  mts_implementation.hpp  mts_texthelper.hpp  ocr.hpp  path_curve.hpp  text_synthesizer.hpp  text_transformations.hpp
modules/text/samples/: dictnet_demo.cpp  dictnet_demo.py  map_generator.py  text_synthesiser.py
modules/text/src/: flow  flow.cpp  flow_lines.cpp  map_text_synthesizer.cpp  mts_basehelper.cpp  mts_bghelper.cpp  mts_implementation.cpp  mts_texthelper.cpp  ocr_holistic.cpp  path_curve.cpp  precomp.hpp  text_synthesizer.cpp  text_transformations.cpp
